		Planner: adjusted permissions to allow teachers with Planner_viewAllEditMyClasses rights to view Unit Overview for classes they don't teach
		Planner: fixed bug causing incorrect Satisfactory count in Work Summary by Form Group report
		School Admin: fixed timezone issue in display of dates in Special Days view
		Students: added ability to store internal documents against student application forms
		Students: fixed bug preventing upload of application form documents when cookies disabled
		Students: fixed bug preventing some application form language/citizenship fields from not being saved
		Students: added settable thresholds for issuing academic alerts
		Students: added settable thresholds for issuing behaviour alerts
		Students: added extra action to allow deleting of application forms to be disabled
		Students: added optional permission for students to only view their profile
        Students: added data visualisation for student enrolment over time
        Students: fixed auto-assign houses potentially failing on Application Form acceptance if houses are empty
		Timetable: fixed TT not being navigable if user is not involved in any timetable
		Timetable Admin: fix bulk checking bug in Tie Days to Dates
		Timetable Admin: widened listing of staff in Course Enrolment by Person to include all staff (not just Teaching staff)
		Timetable: added option to display either Day Of The Week or Timetable Day Short Name in column header of timetables
		Timetable: added name of person making a facility booking to timetable view by Person
		Timetable: added optional permission for users to only view their own timetable
		Timetable: added optional permission for parents to only view their children's timetables
		Timetable: increased list of students in Manage Student Enrolment to include all current students
		Tracking: fixed bugs leading to repeated and mixed display of columns