@@ -91,6 +91,7 @@ v14.0.00
 		Planner: adjusted permissions to allow teachers with Planner_viewAllEditMyClasses rights to view Unit Overview for classes they don't teach
 		Planner: fixed bug causing incorrect Satisfactory count in Work Summary by Form Group report
 		School Admin: fixed timezone issue in display of dates in Special Days view
+		Staff: fixed PHP notice in Application Form edit Status field
 		Students: added ability to store internal documents against student application forms
 		Students: fixed bug preventing upload of application form documents when cookies disabled
 		Students: fixed bug preventing some application form language/citizenship fields from not being saved
